# Four-Bar-Mechanism-Haskell

./: .gitignore  README.md  fourbar-linkage-threepenny.cabal
app/: Main.hs
src/: FourBar.hs
